hiding top level nav on search click on tablets to prevent line break

--- a/sites/all/themes/calacademy_zen/sass/calacademy/nav.scss
+++ b/sites/all/themes/calacademy_zen/sass/calacademy/nav.scss
@@ -46,6 +46,13 @@ nav {
 			max-width: inherit;
 			@include box-sizing(border-box);
 			padding-left: $padding;
+
+			.search-open & {
+				#block-menu-menu-top-level,
+				#block-menu-menu-menu-top-level {
+					display: none;
+				}
+			}
 		}
 
 		.region-header {
